Add tests and minor fix.